changing from lower case to upper case

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>ABASS</title>
     </head>
     <body>
-        <h6>This is my personal website</h6>
+        <h6>This is my PERSONAL website</h6>
         <p>this is zakariyah abass</p>
         <p title="W3 is nice">W3 is a web developer site</p>
         <p>This is <br> abass</p>
